fixed bug when content is covered by the sidebar

--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -1,3 +1,9 @@
 .dashboard-wrapper {
+    display: flex;
     height: 100vh;
+}
+
+.content {
+    flex: 1;
+    overflow-y: auto;
 }
