--- a/src/assets/styles/sidebar.css
+++ b/src/assets/styles/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar-container {
-    position: fixed;
+    position: sticky;
     width: 200px;
     height: 100%;
     background: #eee;
